--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
   },
   "homepage": "https://github.com/LitoMore/string-length-cli#readme",
   "dependencies": {
-    "meow": "^10.1.1"
+    "meow": "^12.0.1",
+    "string-length": "^6.0.0"
   },
   "devDependencies": {
-    "ava": "^3.15.0",
-    "execa": "^5.1.1",
-    "xo": "^0.44.0"
+    "ava": "^5.3.0",
+    "execa": "^7.1.1",
+    "xo": "^0.54.2"
   }
 }
