--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "string-length": "cli.js"
   },
   "scripts": {
-    "test": "xo && ava"
+    "test": "xo && c8 ava"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LitoMore/string-length-cli.git"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "files": [
     "cli.js"
@@ -40,12 +40,13 @@
   },
   "homepage": "https://github.com/LitoMore/string-length-cli#readme",
   "dependencies": {
-    "meow": "^12.0.1",
+    "meow": "^13.2.0",
     "string-length": "^6.0.0"
   },
   "devDependencies": {
-    "ava": "^5.3.0",
-    "execa": "^7.1.1",
-    "xo": "^0.54.2"
+    "ava": "^6.2.0",
+    "c8": "^10.1.3",
+    "execa": "^9.5.2",
+    "xo": "^0.60.0"
   }
 }
